--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html>
 	<head lang="en">
 		<meta charset="utf-8">
-		<title>My first three.js app</title>
+		<title>Interactive Robot</title>
 		<style>
 			body { margin: 0; }
+			
 		</style>
+		<script type="text/javascript" src="dat.gui.min.js"></script>
 	</head>
 	<body>
         <script src="three.js"></script>
 		<script type="module" src="/main.js"></script>
+		<div title="Move - WASD&#10Rotate - QE&#10Up + Down - RF&#10Return to Center - Space&#10Toggle Headlight - C" ; style="background-color:rgb(10, 9, 9); color:white;">Hover to see Robot Keyboard Controls. </div>
+		</div>
+		
+			
+		
+
+		
 	</body>
 </html>
