--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
         <script src="three.js"></script>
 		<script type="module" src="/main.js"></script>
-		<div title="Move - WASD&#10Rotate - QE&#10Up + Down - RF&#10Return to Center - Space&#10Toggle Headlight - C" ; style="background-color:rgb(10, 9, 9); color:white;">Hover to see Robot Keyboard Controls. </div>
+		<div title="Move - WASD&#10Rotate - QE&#10Up + Down - RF&#10Return to Center - Space&#10Toggle Headlight - C&#10Toggle First Person - X&#10Cool Trick - Z" ; style="background-color:rgb(10, 9, 9); color:white;">Hover to see Robot Keyboard Controls. </div>
 		</div>
 		
 			
